# chunk_tabpfn

./: .gitignore  README.md  demo_notebook.ipynb  large_tasks.json  main.py  notebook_analyze_parity.ipynb  pyproject.toml  run_single_tabarena_large_task_manual.py  run_single_tabarena_task.py  tabarena_leaderboard.py
results/: tabarena_long_chunk.csv  tabarena_long_nochunk.csv
src/tabpfn/: test.py
src/tabpfn/extensions/: replace_chunk_attn_computation.py  replace_chunk_attn_computation_math_kernel.py
src/tabpfn/model/: layer.py  multi_head_attention.py  preprocessing.py
tabarena_benchmarking_examples/: README.md  ruff.toml
tabarena_benchmarking_examples/external_libs/tabrepo/tabrepo/models/tabpfnv2/: generate.py
tabarena_benchmarking_examples/external_libs/tabrepo/tabrepo/utils/: config_utils.py
tabarena_benchmarking_examples/tabarena_minimal_example/: README.md  custom_tabarena_model.py  run_evaluate_model.py  run_tabarena_lite.py  run_tabarena_model.py  run_tabarena_on_custom_dataset.py
tabarena_benchmarking_examples/tabarena_minimal_example/custom_tabpfn/: leaderboard.tex  tabarena_leaderboard.csv
tabarena_benchmarking_examples/tabflow_slurm/: README.md  ray_utils.py  run_setup_slurm_jobs.py  run_tabarena_experiment.py  submit_template_gpu.sh
tabarena_benchmarking_examples/tabflow_slurm/benchmarking_setup/: download_all_foundation_models.py
tabarena_benchmarking_examples/tabflow_slurm/models/: README.md  configs_all_gpu.yaml  run_generate_tabarena_gpu_configs.py
(+1 files in other folders)
