[project]
name = "chunk-tabpfn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "autogluon>=1.3.1",
    "boto3>=1.39.9",
    "ipykernel>=6.29.5",
    "openml>=0.15.1",
    "seaborn>=0.13.2",
    "torch==2.6",
    "tueplots>=0.0.17",
]
